sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: ';' expected but integer literal found.
      for(j<- i to 0) y1eld 1*-1
                            ^