sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
 	val n = getNombreValeurs()
  for(i<- 1 to n-2)
  {
    if(plusPetit(i+1, i))
    {
      for(j<- i to 0) y1eld 1*-1
      {
        if(plusPetit(j, i+1))
        	echange(j+1, i+1)
      }
    }
  }
}